# dsoxlab

./: .gitignore  .plumber.yaml  .poutine.yml  .pre-commit-config.yaml  CHANGELOG.fr.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  NOTICE  README.fr.md  README.md  RELEASING.fr.md  RELEASING.md  SECURITY.fr.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  plumber.yml  release.yml  scorecard.yml
docs/: demo.tape
fuzz/: fuzz_lab_yaml.py  fuzz_meta_yaml.py
fuzz/corpus/lab_yaml/: shell-minimal.yaml  vm-multi-target.yaml
fuzz/corpus/meta_yml/: full-infra.yml
fuzz/dict/: yaml_contract.dict
scripts/: check-release.py
src/dsoxlab/: __init__.py  cli.py  config.py
src/dsoxlab/discovery/: __init__.py  repo.py  scanner.py
src/dsoxlab/i18n/: __init__.py
src/dsoxlab/i18n/strings/: en.py  fr.py
src/dsoxlab/infra/: __init__.py  ansible.py  credentials.py  inventory.py  terraform.py
src/dsoxlab/infra/snapshot/: __init__.py  kvm.py
src/dsoxlab/models/: __init__.py  _contract.py  course.py  hint.py  lab.py  repo.py  runtime.py
src/dsoxlab/reporting/: __init__.py  console.py  machine.py
src/dsoxlab/runtimes/: __init__.py  base.py  manager.py  shell.py  vm.py
src/dsoxlab/services/: __init__.py  guide_service.py  lab_service.py  progress_service.py  update_check.py
src/dsoxlab/sessions/: __init__.py  store.py
src/dsoxlab/templates/: __init__.py
src/dsoxlab/templates/cloud-init/: almalinux.yaml.tmpl  debian.yaml.tmpl  ubuntu.yaml.tmpl
src/dsoxlab/templates/terraform/: README.md
src/dsoxlab/templates/terraform/incus/: main.tf  outputs.tf  variables.tf  versions.tf
src/dsoxlab/templates/terraform/kvm/: main.tf  outputs.tf  variables.tf  versions.tf
src/dsoxlab/templates/terraform/outscale/: main.tf  outputs.tf  variables.tf  versions.tf
src/dsoxlab/utils/: __init__.py  shell.py
src/dsoxlab/validators/: __init__.py  content.py  metadata.py  structure.py
tests/: test_cli_smoke.py  test_cloud_init_templates.py  test_guide_service.py  test_json_output.py  test_progress_service.py  test_session_spec.py  test_update_check.py  test_validators_content.py  test_yaml_contract.py
